# choushachou-switch

./: .gitignore  README.md  build-dmg.sh  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
